# llm-bias-eval

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: benchmarks.yaml  models.yaml
docs/: project_description.md
notebooks/: 00_mvp_validation.ipynb  01_colab_run.ipynb  02_analysis.ipynb  03_colab_intervention.ipynb  04_intervention_analysis.ipynb
scripts/: download_models.py  progress.py  run_analysis.py  run_intervention.py  run_logit_benchmarks.py  run_mvp_validation.py  run_probing.py  run_regression.py
src/biaseval/: __init__.py  data.py  io.py  model_loader.py  registry.py  tracking.py
src/biaseval/analysis/: aggregate_results.py  plotting.py  regression.py  statistics.py
src/biaseval/benchmarks/: bbq.py  crows_pairs.py  iat.py  implicit_explicit.py  stereoset.py  utils.py
src/biaseval/intervention/: __init__.py  hooks.py  inlp.py  sanity.py
src/biaseval/probing/: datasets.py  extract_activations.py  linear_probe.py
tests/: test_direction_aggregator.py  test_intervention.py  test_probe_datasets.py  test_registry.py  test_regression.py  test_smoke.py  test_statistics.py
